Public routes for products

--- a/api-gateway/src/config.json
+++ b/api-gateway/src/config.json
@@ -5,8 +5,13 @@
       "routes": [
         {
           "path": "/products",
-          "methods": ["get", "post"],
+          "methods": ["post"],
           "middlewares": ["auth"]
+        },
+        {
+          "path": "/products",
+          "methods": ["get"],
+          "middlewares": []
         },
         {
           "path": "/products/:id",
