setup for cart service

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -42,8 +42,19 @@ services:
       - "1025:1025"
     volumes:
       - mailhog:/var/lib/mailhog
+  redis-stack:
+    image: redis/redis-stack:latest
+    ports:
+      - "6379:6379"
+      - "8001:8001"
+    volumes:
+      - redis-stack:/var/lib/redis-stack
+    environment:
+      - REDIS_ARGS=--save 900 1
+
   # ------------------------------------------
 
 volumes:
   postgres:
   mailhog:
+  redis-stack:
