--- a/services/cart/package.json
+++ b/services/cart/package.json
@@ -21,6 +21,7 @@
     "helmet": "^8.1.0",
     "ioredis": "^5.8.1",
     "morgan": "^1.10.1",
+    "uuid": "^13.0.0",
     "zod": "^4.1.11"
   },
   "devDependencies": {
@@ -29,6 +30,7 @@
     "@types/ioredis": "^5.0.0",
     "@types/morgan": "^1.9.10",
     "@types/node": "^24.6.2",
+    "@types/uuid": "^11.0.0",
     "ts-node-dev": "^2.0.0",
     "tsc-alias": "^1.8.16",
     "tsconfig-paths": "^4.2.0",
