--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -52,9 +52,20 @@ services:
     environment:
       - REDIS_ARGS=--save 900 1
 
+  rabbitmq:
+    image: rabbitmq:3-management
+
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+
+    volumes:
+      - rabbitmq_data:/var/lib/rabbitmq
+
   # ------------------------------------------
 
 volumes:
   postgres:
   mailhog:
   redis-stack:
+  rabbitmq_data:
