--- a/services/cart/package.json
+++ b/services/cart/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "packageManager": "pnpm@10.18.0",
   "dependencies": {
+    "amqplib": "^0.10.9",
     "axios": "^1.12.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
@@ -25,6 +26,7 @@
     "zod": "^4.1.11"
   },
   "devDependencies": {
+    "@types/amqplib": "^0.10.7",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/ioredis": "^5.0.0",
