--- a/services/email/package.json
+++ b/services/email/package.json
@@ -16,6 +16,7 @@
   "packageManager": "pnpm@10.18.0",
   "dependencies": {
     "@prisma/client": "^6.16.3",
+    "amqplib": "^0.10.9",
     "axios": "^1.12.2",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
@@ -27,6 +28,7 @@
     "zod": "^4.1.11"
   },
   "devDependencies": {
+    "@types/amqplib": "^0.10.7",
     "@types/bcryptjs": "^3.0.0",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
