--- a/services/order/package.json
+++ b/services/order/package.json
@@ -16,6 +16,7 @@
   "packageManager": "pnpm@10.18.0",
   "dependencies": {
     "@prisma/client": "^6.16.3",
+    "amqplib": "^0.10.9",
     "axios": "^1.12.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
@@ -24,6 +25,7 @@
     "zod": "^4.1.11"
   },
   "devDependencies": {
+    "@types/amqplib": "^0.10.7",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/morgan": "^1.9.10",
